feat: win lose logic

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,14 +40,14 @@ h2 {
   gap: 2px;
 }
 
-div.cell {
+button.cell {
   width: 40px;
   height: 40px;
   background-color: #5bc0de;
   border: 1px solid #000;
 }
 
-.grid div.cell:hover {
+.grid button.cell:hover {
   cursor: pointer;
   background-color: #337ab7;
 }
